--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,16 @@
 @import './styles/utilities.scss';
 
+@import './styles/components/scroll-reveal.scss';
+
+@import './styles/components/header.scss';
+@import './styles/components/nav.scss';
+@import './styles/components/hero.scss';
+@import './styles/components/footer.scss';
+
+@import './styles/components/career.scss';
+
 @import './styles/components/skillCard.scss';
+@import './styles/components/filterTags.scss';
+@import './styles/components/projects.scss';
+@import './styles/components/projectDetails.scss';
 @import './styles/components/careerTimeline.scss';
