--- a/src/styles/components/projects.scss
+++ b/src/styles/components/projects.scss
@@ -211,6 +211,10 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 1rem;
+
+            &.full {
+                grid-template-columns: 2fr;
+            }
         }
 
         .gallery-image {
