--- a/src/styles/components/projects.scss
+++ b/src/styles/components/projects.scss
@@ -12,9 +12,9 @@
 
 .project-card {
     transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
-    cursor: pointer;
     transform-origin: center;
     width: 100%;
+    height: 100%;
 
     &.expanded {
         max-width: 1200px;
@@ -26,16 +26,17 @@
         transform: translateY(-5px);
     }
 
-    :deep(.p-card-header) {
+    .p-card-header {
         padding: 0;
     }
 
-    :deep(.p-card-content) {
+    .p-card-content {
         padding-top: 1.5rem;
     }
 }
 
 .project-header {
+    cursor: pointer;
     height: 300px;
     background-size: cover;
     background-position: center;
@@ -74,6 +75,7 @@
         opacity: 0.9;
         transform: translateY(0);
         transition: transform 0.4s cubic-bezier(0.16, 1, 0.3, 1);
+        text-align: center;
     }
 }
 
@@ -90,6 +92,7 @@
 }
 
 .project-content {
+    position: realtive;
     .basic-info {
         p {
             margin: 0 0 1rem;
@@ -100,7 +103,6 @@
 }
 
 .projects {
-
     .expand-enter-active,
     .expand-leave-active {
         transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
