fix contact card

--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,4 @@
 @import './styles/components/projectDetails.scss';
 @import './styles/components/filterButton.scss';
 @import './styles/components/careerTimeline.scss';
+@import './styles/components/contactCard.scss';
