style fullscreen modal and adapt project elements

--- a/src/style.css
+++ b/src/style.css
@@ -16,3 +16,4 @@
 @import './styles/components/filterButton.scss';
 @import './styles/components/careerTimeline.scss';
 @import './styles/components/contactCard.scss';
+@import './styles/components/galleryDialog.scss';
