--- a/src/styles/components/projects.scss
+++ b/src/styles/components/projects.scss
@@ -260,6 +260,7 @@
     }
 
     .video-section {
+        margin-bottom: 1.5rem;
         .video-player {
             video {
                 width: 100%;
