--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@
 
 @import './styles/components/career.scss';
 
+@import './styles/components/pageHeader.scss';
 @import './styles/components/skillCard.scss';
 @import './styles/components/projects.scss';
 @import './styles/components/projectDetails.scss';
