--- a/src/styles/components/projects.scss
+++ b/src/styles/components/projects.scss
@@ -55,13 +55,21 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(74, 111, 165, 0.85);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
     padding: 1rem;
+
+    &:before {
+        content: '';
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: var(--text-color);
+        opacity: 0.6;
+    }
 
     h3 {
         color: white;
@@ -83,7 +91,9 @@
 }
 
 .project-card:hover .project-overlay {
-    background: rgba(74, 111, 165, 0.95);
+    &:before {
+        opacity: 0.8;
+    }
 
     h3 {
         transform: translateY(-5px);
