work over existing design - kill everything

--- a/src/style.css
+++ b/src/style.css
@@ -22,3 +22,6 @@
 @import './styles/components/careerTimeline.scss';
 @import './styles/components/contactCard.scss';
 @import './styles/components/galleryDialog.scss';
+
+/*---- new ---*/
+@import './styles/components/dynamicHero.scss';
